centers and bottom aligns other two images, as well as fixes nav links

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ ul li {
 .btn-default {
   background: #c8c8c8;
   color: white;
+  margin: 0.4vh 0.4vw;
 }
 
 .row {
@@ -54,4 +55,8 @@ ul li {
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
+}
+
+.row a {
+  color: #c05d73;
 }
